Fixed the navbar overflow scroll conditions ( mobile allows overflow, desktop does not)

--- a/Style.css
+++ b/Style.css
@@ -147,6 +147,7 @@ footer a{
         background-image: url(Images/apple-iphone-smartphone-desk.jpg);
         background-position-y: -300px;
         height: 50vh;
+        overflow: hidden;
     }
     .cover-image{
         height: 50vh;
